# My-Python

./: .gitignore  .gitmodules  pyproject.toml
Chapter-10-Object_Oriented_Programming/: Class.py  Constructor.py  InstanceVsClass-Attributes.py  Self.py
Chapter-11-Inheritance&OOPs/: Inheritence.py  Multi-Inheritance.py  Property-Decors.py
Chapter-11-Inheritance&OOPs/Practice-Set/: 1.py  6.py  7.py
Chapter-3-Strings/: Esc-seq.py  Joining.py  Neg-Slicing.py  Slicing.py
Chapter-3-Strings/Practise-Set/: 3.py  4.py
Chapter-4-Lists&Tuples/: Tuples.py
Chapter-4-Lists&Tuples/Practice-Set/: 2.py  4.py  5.py
Chapter-4-Lists_and_Tuples/: Lists.py
Chapter-5-Dictionaries&Sets/: Dict.py  Set_Union.py
Chapter-5-Dictionaries&Sets/Practice-Set/: 2.py  5.py  6,7&8.py  9.py
Chapter-6-Conditional_Expressions/: intro.py  q-1.py
Chapter-6-Conditional_Expressions/Practice-Set/: 1.py  4.py  6.py  8.py
Chapter-7-Loops/: For.py  ListWithFor.py  QQ-1.py  QQ-2.py
Chapter-7-Loops/Practice-Set/: 10.py  2.py  4.py  5.py  6.py  8.py  9.py
Chapter-8-Funcs&Reccurtions/: QQ-1.py  Recursion.py
Chapter-8-Funcs&Reccurtions/Practice-Set/: 1.py  2.py  3.py  5-alt.py  5.py  6.py  8-alt.py
Course_Projects/Perfect-Guess/: main.py
Extras/: WOW.py
JARVIS/: main.py  news.py  readme.md
Libraries/Pandas/: new.ipynb
Libraries/Streamlit/: Buttons-Forms.py  Normal-Medias.py  callbacks.py  session-state.py
Modules/Google_GenAI/: chat.py  genarate_stream.py  models_inventory.txt
Modules/Json/: main.py  (+1 more)
My_Projects/: Banglish_Dictionary.py
chapter-2/: Types-Conversion.py
(+84 files in other folders)
