[project]
name = "my-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit[google]>=1.0.23",
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
    "u>=1.0.4",
]

[tool.uv.workspace]
members = [
    "Modules/Pillow-Img",
]
